testsuite/tests/typecheck/should_fail/tcfail014.stderr

tcfail014.hs:5:33: error:
    • Occurs check: cannot construct the infinite type: t7 ~ t7 -> t8
    • In the first argument of ‘z’, namely ‘z’
      In the expression: z z
      In an equation for ‘h’: h z = z z
    • Relevant bindings include
        z :: t7 -> t8 (bound at tcfail014.hs:5:27)
        h :: (t7 -> t8) -> t8 (bound at tcfail014.hs:5:25)
